--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
 	<div ui-view> </div>	
      
   <script src="js/browser-bundle.js"></script>
-
+  <script src="js/services/dataService.js" type="text/javascript"></script>
+  <script src="js/controllers/costController.js"></script>
   </body>
 
 </html>
